przygotowanie dokumentów-praca w html

--- a/app_jq.html
+++ b/app_jq.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Projekt [wpisz nazwę]</title>
+    <title>Projekt "Wyścig samochodowy"</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -21,7 +21,7 @@
     <![endif]-->
 
     <!-- Tutaj dodajesz swój kod -->
-    <h1>Projekt [wpisz nazwę]</h1>
+    <h1>Projekt "Wyścig samochodowy"</h1>
     <div>
       <ul class="menu">
         <li><a href="index.html">Strona główna</a></li>
@@ -30,7 +30,59 @@
       </ul>
     </div>
 
-
+<div class="wynik-div">
+    Score: <span id="wynik">8</span>
+</div>
+<div id="container">
+  <div id="linia1" class="linia"></div>
+  <div id="linia2" class="linia"></div>
+  <div id="linia3" class="linia"></div>
+  <div id="auto-gracza" class="auto">
+    <div class="przód-szyba"></div>
+    <div class="tył-szyba"></div>
+    <div class="przód-światło-l"></div>
+    <div class="przód-światło-p"></div>
+    <div class="przód-koło-l"></div>
+    <div class="przód-koło-p"></div>
+    <div class="tył-koło-l"></div>
+    <div class="tył-koło-p"></div>
+  </div>
+  <div id="auto1" class="auto">
+    <div class="przód-szyba"></div>
+    <div class="tył-szyba"></div>
+    <div class="przód-światło-l"></div>
+    <div class="przód-światło-p"></div>
+    <div class="przód-koło-l"></div>
+    <div class="przód-koło-p"></div>
+    <div class="tył-koło-l"></div>
+    <div class="tył-koło-p"></div>
+  </div>
+  <div id="auto2" class="auto">
+    <div class="przód-szyba"></div>
+    <div class="tył-szyba"></div>
+    <div class="przód-światło-l"></div>
+    <div class="przód-światło-p"></div>
+    <div class="przód-koło-l"></div>
+    <div class="przód-koło-p"></div>
+    <div class="tył-koło-l"></div>
+    <div class="tył-koło-p"></div>
+  </div>
+  <div id="auto3" class="auto">
+    <div class="przód-szyba"></div>
+    <div class="tył-szyba"></div>
+    <div class="przód-światło-l"></div>
+    <div class="przód-światło-p"></div>
+    <div class="przód-koło-l"></div>
+    <div class="przód-koło-p"></div>
+    <div class="tył-koło-l"></div>
+    <div class="tył-koło-p"></div>
+  </div>
+  <div id="restart-div">
+    <button id="restart" type="button" name="button">
+      RESTART <br> <small class="small-text">(naciśnij Enter)</small>
+    </button>
+  </div>
+</div>
 
     <!-- skrypt umożliwiający sprawdzanie możliwośći przeglądarki -->
     <script src="js/vendor/modernizr-3.5.0.min.js"></script>
