--- a/app_jq.html
+++ b/app_jq.html
@@ -24,7 +24,7 @@
     <h1>Projekt "Wyścig samochodowy"</h1>
 
 <div class="wynik-div">
-    Score: <span id="wynik">8</span>
+    Wynik: <span id="wynik">8</span>
 </div>
 <div id="container">
   <div id="linia1" class="linia"></div>
