--- a/app_jq.html
+++ b/app_jq.html
@@ -23,7 +23,7 @@
     <!-- Tutaj dodajesz swój kod -->
     <h1>Projekt "Wyścig samochodowy"</h1>
 
-<div class="wynik-div">
+<div id="wynik-div">
     Wynik: <span id="wynik">8</span>
 </div>
 <div id="container">
