--- a/app_jq.html
+++ b/app_jq.html
@@ -72,7 +72,7 @@
   </div>
   <div id="restart-div">
     <button id="restart" type="button" name="button">
-      RESTART <br> <small class="small-text">(naciśnij Enter)</small>
+      RESTART <br> <small class="small-text">(kliknij)</small>
     </button>
   </div>
 </div>
