--- a/app_p5.html
+++ b/app_p5.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Projekt "Ustrzel nietoperza"</title>
+    <title>Projekt "Wyścig samochodowy"</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,7 +22,7 @@
 
     <!-- Tutaj dodajesz swój kod -->
     <!-- Tutaj dodajesz swój kod -->
-    <h1>Projekt "Ustrzel nietoperza"</h1>
+    <h1>Projekt "Wyścig samochodowy"</h1>
     <div>
       <ul class="menu">
         <li><a href="index.html">Strona główna</a></li>
