--- a/app_p5.html
+++ b/app_p5.html
@@ -1,4 +1,4 @@
-<!doctype html>
+tml>
 <html class="no-js" lang="pl">
   <head>
     <meta charset="utf-8">
@@ -23,6 +23,7 @@
     <!-- Tutaj dodajesz swój kod -->
     <!-- Tutaj dodajesz swój kod -->
     <h1>Projekt "Wyścig samochodowy"</h1>
+
     <div>
       <ul class="menu">
         <li><a href="index.html">Strona główna</a></li>
@@ -46,6 +47,6 @@
     <script src="js/main.js"></script>
     <!--kod aplikacji w p5js-->
     <script src="js/app_p5.js"></script>
-
+      
   </body>
 </html>
