--- a/app_p5.html
+++ b/app_p5.html
@@ -1,4 +1,4 @@
-tml>
+<!doctype html>
 <html class="no-js" lang="pl">
   <head>
     <meta charset="utf-8">
@@ -47,6 +47,6 @@ tml>
     <script src="js/main.js"></script>
     <!--kod aplikacji w p5js-->
     <script src="js/app_p5.js"></script>
-      
+
   </body>
 </html>
