--- a/app_p5.html
+++ b/app_p5.html
@@ -22,7 +22,7 @@
 
     <!-- Tutaj dodajesz swój kod -->
     <!-- Tutaj dodajesz swój kod -->
-    <h1>Projekt "Wyścig samochodowy"</h1>
+    <h1>Projekt "Wyścig samochodowy!"</h1>
 
     <div>
       <ul class="menu">
